put show.js with server urls and other small fixs

--- a/css/show_style.css
+++ b/css/show_style.css
@@ -4,18 +4,16 @@
 }
 
 #main{
-	margin:0px auto;
+  margin:0px auto;
   width:99%;
 }
 
 body{
-  background-image:url("../export/fundo/fundo.jpg");
   background-position:center top ;
   background-repeat:repeat-x;
   font-family: Helvetica,Arial;
   font-size:0.8em;
   color:#666666;
-
 }
 
 .page{
@@ -29,4 +27,11 @@ body{
 	border:none;
 	display:block;
 	margin:0px auto;
+}
+
+a,
+a:active,
+a:focus {
+-moz-outline-style: none;
+outline: none;
 }
