--- a/css/show_style.css
+++ b/css/show_style.css
@@ -35,3 +35,6 @@ a:focus {
 -moz-outline-style: none;
 outline: none;
 }
+
+#overlay { visibility: hidden; opacity:0.8; background-color:#fff; position: absolute; left: 0px; top: 0px; width:100%; height:100%; text-align:center; z-index: 1000; }
+#overlay div { width:30px; margin: 100px auto; padding:15px; text-align:center; }
